--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-online",
   "version": "0.1.0",
   "description": "A reactive online/offline component for vue.js",
-  "main": "index.js",
+  "main": "./dist/vue-online.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sopamo/vue-online.git"
@@ -11,7 +11,11 @@
     "vue",
     "connection-status",
     "online",
-    "offline"
+    "offline",
+    "vue-component",
+    "vue-connection-status-component",
+    "vue-online-component",
+    "vue-offline-component"
   ],
   "author": "Sopamo GmbH",
   "license": "MIT",
@@ -19,7 +23,29 @@
     "url": "https://github.com/Sopamo/vue-online/issues"
   },
   "homepage": "https://github.com/Sopamo/vue-online#readme",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  webpack.config.build.js"
+  },
   "dependencies": {
     "vue": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^6.0.0",
+    "cross-env": "^1.0.6",
+    "css-loader": "^0.23.0",
+    "file-loader": "^0.8.4",
+    "json-loader": "^0.5.4",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.2.1",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
