--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-online",
   "version": "1.1.0",
   "description": "A reactive online/offline component for vue.js",
-  "main": "./dist/vue-online.js",
+  "main": "./main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sopamo/vue-online.git"
