--- a/package.json
+++ b/package.json
@@ -24,14 +24,21 @@
   },
   "homepage": "https://github.com/Sopamo/vue-online#readme",
   "scripts": {
-    "compile": "babel --presets es2015 main.js --out-file build.js",
+    "compile": "webpack --config webpack.config.js",
     "prepublish": "npm run compile"
-  },
-  "dependencies": {
-    "vue": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0"
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-runtime": "^6.11.6",
+    "css-loader": "^0.25.0",
+    "vue": "^2.1.3",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-loader": "^10.0.1",
+    "vue-template-compiler": "^2.1.3",
+    "webpack": "^1.13.2"
   }
 }
