--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-online",
   "version": "1.1.3",
   "description": "A reactive online/offline component for vue.js",
-  "main": "./build.js",
+  "main": "./dist/bundle.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sopamo/vue-online.git"
