--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-online",
   "version": "1.1.4",
   "description": "A reactive online/offline component for vue.js",
-  "main": "./dist/bundle.js",
+  "main": "./main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sopamo/vue-online.git"
@@ -23,22 +23,7 @@
     "url": "https://github.com/Sopamo/vue-online/issues"
   },
   "homepage": "https://github.com/Sopamo/vue-online#readme",
-  "scripts": {
-    "compile": "webpack --config webpack.config.js",
-    "prepublish": "npm run compile"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-runtime": "^6.11.6",
-    "css-loader": "^0.25.0",
-    "vue": "^2.1.3",
-    "vue-hot-reload-api": "^2.0.6",
-    "vue-loader": "^10.0.1",
-    "vue-template-compiler": "^2.1.3",
-    "webpack": "^1.13.2"
+  "peerDependencies": {
+    "vue": "2.x.x"
   }
 }
